<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/main_mm"
        android:orderInCategory="100"
        android:title="@string/family_collector_mm"
        />
    <item android:id="@+id/gallery_mm"
        android:orderInCategory="100"
        android:title="@string/gallery"
        />
    <item android:id="@+id/about_mm"
        android:orderInCategory="100"
        android:title="@string/about_us_mm"
        />
    <item android:id="@+id/settings_mm"
        android:orderInCategory="100"
        android:title="@string/settings"
    />
    <item android:id="@+id/login_mm"
        android:orderInCategory="100"
        android:title="@string/loginappbar"
        />
    <item android:id="@+id/register_mm"
        android:orderInCategory="100"
        android:title="@string/register"
        />
    <item android:id="@+id/signout_mm"
        android:orderInCategory="100"
        android:title="@string/signout"
        />
    <item android:id="@+id/exit_mm"
        android:orderInCategory="100"
        android:title="@string/exit_app"
        />
</menu>